# seitai

./: .dockerignore  .editorconfig  .envrc.sample  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-bake.hcl  init_resource.sh  pyproject.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: bump.yml  cd.yml  ci.yml  tag.yml
crates/database/: Cargo.toml
crates/database/src/: lib.rs  migrations.rs  sound.rs  soundsticker.rs  speaker.rs  sticker.rs  user.rs
crates/database/src/migrations/: v1_users_and_speakers.rs  v2_soundstickers.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/restarter/: Cargo.toml
crates/restarter/src/: client.rs  event_handler.rs  lib.rs  restarter.rs
crates/restarter/src/event_handler/: ready.rs  voice_state_update.rs
crates/restarter/src/restarter/: tests.rs
crates/serenity-utils/: Cargo.toml
crates/serenity-utils/src/: lib.rs  voice_state.rs
crates/soundboard/: Cargo.toml
crates/soundboard/src/: client.rs  error.rs  lib.rs  sound.rs  soundboard.rs
crates/voicevox/: Cargo.toml
crates/voicevox/src/: audio.rs  dictionary.rs  lib.rs  request.rs  response.rs  voicevox.rs
crates/voicevox/src/audio/: mod.rs  response.rs
crates/voicevox/src/dictionary/: mod.rs  response.rs
crates/voicevox/src/speaker/: mod.rs  response.rs
database/: 01_schema.sql
epitran-kana/: Cargo.toml
epitran-kana/src/: main.rs
epitran-kana/src/endpoints/: ipa.rs  kana.rs  mod.rs
epitran-kana/src/transliterator/: ipa.rs  kana.rs
manifests/: deployment-kanatrans.yaml  deployment-seitai.yaml  deployment.yaml  postgresql.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml  statefulset-seitai.yaml  statefulset-voicevox.yaml
restarter/: Cargo.toml
restarter/src/: event_handler.rs  logging.rs  main.rs
scripts/: lex_lookup.sh
seitai/: Cargo.toml
seitai/src/: bot.rs  character_converter.rs  cli.rs  event_handler.rs  main.rs  regex.rs  songbird_manager.rs  sound.rs  speaker.rs  time_keeper.rs  time_keepr.rs  utils.rs  voicevox.rs
seitai/src/audio/: cache.rs  generator.rs  mod.rs  processor.rs
seitai/src/cli/: subcommands.rs
seitai/src/cli/args/: discord.rs
seitai/src/cli/subcommands/: migration.rs  restarter.rs
seitai/src/commands/: dictionary.rs  help.rs  join.rs  leave.rs  mod.rs  soundsticker.rs  subcommand.rs  voice.rs
seitai/src/database/: identifier.rs  mod.rs  speaker.rs  user.rs
seitai/src/event_handler/: interaction_create.rs  message.rs  ready.rs  voice_state_update.rs
src/: event_handler.rs  main.rs  utils.rs  voicevox.rs
src/commands/: help.rs  join.rs  leave.rs  mod.rs
