[workspace]
members = ["crates/database", "crates/logging", "crates/soundboard", "crates/voicevox", "restarter", "seitai"]
default-members = ["seitai"]
resolver = "3"

[workspace.dependencies.anyhow]
version = "1.0.100"

[workspace.dependencies.http-body-util]
version = "0.1.3"

[workspace.dependencies.hyper]
version = "1.8.1"
features = ["client", "http1"]

[workspace.dependencies.hyper-util]
version = "0.1.18"
features = ["client", "client-legacy", "http1", "tokio"]

[workspace.dependencies.logging]
path = "crates/logging"

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.145"

[workspace.dependencies.serenity]
version = "0.12.4"
default-features = false

[workspace.dependencies.tokio]
version = "1.48.0"
features = ["macros", "net", "rt-multi-thread", "signal"]

[workspace.dependencies.tracing]
version = "0.1.43"

[workspace.dependencies.url]
version = "2.5.7"

[workspace.dependencies.uuid]
version = "1.18.1"
features = ["v4", "serde"]

[profile.dev.package."*"]
debug = false
