[package]
name = "restarter"
version = "0.1.7"
edition = "2021"

[dependencies.anyhow]
workspace = true

[dependencies.futures]
version = "0.3.31"

[dependencies.k8s-openapi]
version = "0.24.0"
features = ["latest"]

[dependencies.kube]
version = "0.98.0"

[dependencies.logging]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.serenity]
workspace = true
