[package]
name = "seitai"
version = "0.2.2"
edition = "2024"

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4.5.31"
features = ["derive", "env"]

[dependencies.database]
path = "../crates/database"

[dependencies.futures]
workspace = true

[dependencies.hashbrown]
version = "0.15.2"

[dependencies.http-body-util]
workspace = true

[dependencies.hyper]
workspace = true

[dependencies.hyper-util]
workspace = true

[dependencies.indexmap]
version = "2.7.1"
features = ["serde"]

[dependencies.lazy-regex]
version = "3.4.1"
features = ["lite"]

[dependencies.logging]
workspace = true

[dependencies.ordered-float]
version = "5.0.0"

[dependencies.regex-lite]
version = "0.1.6"

[dependencies.restarter]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serenity]
workspace = true
features = ["builder", "cache", "client", "collector", "gateway", "model", "native_tls_backend"]

[dependencies.songbird]
version = "0.5.0"
default-features = false
features = ["builtin-queue", "driver", "gateway", "native", "serenity", "tungstenite"]

[dependencies.soundboard]
path = "../crates/soundboard"

[dependencies.strum]
features = ["derive"]
version = "0.27.1"

[dependencies.symphonia]
version = "0.5.4"
features = ["wav"]

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.url]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.voicevox]
path = "../crates/voicevox"

[dev-dependencies.mockall]
version = "0.13.1"
