[package]
name = "seitai"
version = "0.2.5"
edition = "2024"

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4.5.54"
features = ["derive"]

[dependencies.database]
path = "../crates/database"

[dependencies.futures]
version = "0.3.31"

[dependencies.hashbrown]
version = "0.16.1"

[dependencies.http-body-util]
workspace = true

[dependencies.hyper]
workspace = true

[dependencies.hyper-util]
workspace = true

[dependencies.indexmap]
version = "2.13.0"
features = ["serde"]

[dependencies.lazy-regex]
version = "3.6.0"
features = ["lite"]

[dependencies.logging]
workspace = true

[dependencies.ordered-float]
version = "5.1.0"

[dependencies.regex-lite]
version = "0.1.9"

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serenity]
workspace = true
features = ["builder", "cache", "client", "collector", "gateway", "model", "native_tls_backend"]

[dependencies.songbird]
version = "0.5.0"
default-features = false
features = ["builtin-queue", "driver", "gateway", "native", "serenity", "tungstenite"]

[dependencies.soundboard]
path = "../crates/soundboard"

[dependencies.strum]
features = ["derive"]
version = "0.27.2"

[dependencies.symphonia]
version = "0.5.5"
features = ["wav"]

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.url]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.voicevox]
path = "../crates/voicevox"

[dev-dependencies.mockall]
version = "0.14.0"
