[package]
name = "database"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies.anyhow]
workspace = true

[dependencies.futures]
version = "0.3.31"

[dependencies.sea-query]
version = "0.32.6"
default-features = false
features = ["backend-postgres", "derive", "thread-safe", "with-uuid"]

[dependencies.sea-query-binder]
version = "0.7.0"
features = ["sqlx-postgres", "with-uuid"]

[dependencies.serde_with]
version = "3.13.0"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid"]

[dependencies.sqlx_migrator]
version = "0.17.0"
features = ["postgres"]

[dependencies.serde]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.uuid]
workspace = true
