[package]
name = "restarter"
version = "0.1.7"
edition = "2024"

[lib]
doctest = false

[dependencies.anyhow]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.k8s-openapi]
version = "0.24.0"
features = ["latest"]

[dependencies.kube]
version = "0.98.0"
default-features = false
features = ["client", "openssl-tls"]

[dependencies.logging]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.serenity]
workspace = true
features = ["cache", "client", "gateway", "model", "native_tls_backend"]

[dependencies.serenity_utils]
workspace = true
