[package]
name = "soundboard"
edition = "2024"

[lib]
doctest = false

[dependencies.reqwest]
version = "0.12.14"
default-features = false
features = ["default-tls", "json"]

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde_with]
version = "3.12.0"

[dependencies.serenity]
workspace = true
default-features = false
features = ["http"]

[dependencies.thiserror]
version = "2.0.12"

[dependencies.url]
workspace = true
