[package]
name = "voicevox"
version = "0.0.0"
edition = "2021"

[dependencies.anyhow]
workspace = true

[dependencies.http-body-util]
version = "0.1.1"

[dependencies.hyper]
version = "1.3.1"
features = ["client", "http1"]

[dependencies.hyper-util]
version = "0.1.5"
features = ["client", "client-legacy", "http1", "tokio"]

[dependencies.indexmap]
version = "2.0.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.202"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.117"

[dependencies.tracing]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.url]
version = "2.5.0"
