[package]
name = "voicevox"
version = "0.0.0"
edition = "2021"

[dependencies.anyhow]
workspace = true

[dependencies.http-body-util]
workspace = true

[dependencies.hyper]
workspace = true

[dependencies.hyper-util]
workspace = true

[dependencies.indexmap]
version = "2.5.0"
features = ["serde"]

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.url]
workspace = true
